day4/affinity-pod-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: affinity-pod-pod
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - web1
        topologyKey: country
  containers:
  - name: with-pod-affinity
    image: registry.k8s.io/pause:2.0
