day4/schedule-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedule-deployment
  labels:
    some: other-label
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp2
  template:
    metadata:
      name: myapp-pod-new
      labels:
        app: myapp2
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker02
      containers:
      - name: myapp-container
        image: nginx
