day4/test-curl2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test-curl2
  name: test-curl2
spec:
  containers:
  - image: radial/busyboxplus:curl
    name: test-curl
    command: ['sh', '-c', 'while true; do sleep 60; done']
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
