day4/tests-nginx-schedule.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: tests-nginx-schedule
  name: tests-nginx-schedule
spec:
  tolerations:
  - key: "env"
    operator: "Exists"
    effect: "NoSchedule"
  - key: "location"
    operator: "Equal"
    value: "pl"
    effect: "NoExecute"
    tolerationSeconds: 30
  containers:
  - image: nginx
    name: tests-nginx-schedule
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
