day4/my-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-networkpolicy
  namespace: devops
spec:
  podSelector:
    matchLabels:
      run: test-devops-pod
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default 
    ports:
    - protocol: TCP
      port: 80
